[package]
name = "etool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = '3.2.8'
xlsxwriter = '0.6.0'
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.138", features = ["derive"] }
select = "0.5.0"
rand = "0.8.5"
lazy_static = "1.4.0"
serde_json = "1.0.82"
calamine = "0.23.0"
